# SimAndCureCxxTest

./: CMakeLists.txt
src/: main.cpp
src/Constants/: Constants.hpp
src/DataTypes/: DataTypes.hpp  WordList.cpp  WordList.hpp
src/Globals/: Globals.cpp  Globals.hpp
src/Logic/: Logic.cpp  Logic.hpp
src/Macros/: Macros.hpp
src/Utils/: Utils.cpp  Utils.hpp
test/: ApplyUnicodeLocale.cpp  FailWithError.cpp  ObtainCountFilePathFromFilePath.cpp  ObtainFilePathFromArguments.cpp  OutputListToFile.cpp  SumListScore.cpp  SumWordScore.cpp  ValidateArguments.cpp  WordList.cpp
